Added Java module-info system to reduce the JRE distribution package size